Working on submitting questions form.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,3 +40,7 @@ input#un-mute:checked ~ .unmute i {
 input#un-mute:checked ~ .mute i {
   display: none;
 }
+
+table { border-spacing: 5px; } /* cellspacing */
+
+th, td { padding: 5px; } /* cellpadding */
