Completed question submission and approval. Need to finish descard button.

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -44,17 +44,16 @@
                   <%= question.title %>
                 </td>
                 <% for answer in question.answers %>
-                    <% if answer.is_correct %>
                         <td>
                           <%= answer.title %>
                         </td>
-                    <% end %>
-                    <td>
-                      <%= answer.title %>
-                    </td>
                 <% end %>
+                <td>
+                    <%= link_to 'Approve', save_user_question_questions_path(:id => question.id), :method => :put %>
+                </td>
+                <td>
+                </td>
               </tr>
-
           <% end %>
       <% end %>
     </table>
