Finished deny button. Bug exists where after denying a question, the category associated with the question is also deleted! Yikes!!

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -52,6 +52,7 @@
                     <%= link_to 'Approve', save_user_question_questions_path(:id => question.id), :method => :put %>
                 </td>
                 <td>
+                <td><%= link_to 'Deny', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                 </td>
               </tr>
           <% end %>
