Finished user statistics and user profile

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -46,6 +46,16 @@ h6 {
   padding: 50px;
 }
 
+#questions-correct {
+  float: left;
+  position:relative;
+  width: 300px;
+}
+
+#opponent-records {
+
+}
+
 #meter {
   margin: 0 auto;
 }
