--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,5 +1,5 @@
 
 <h2 class="text-center">Thank you for your purchase!</h2>
 <script>
-    $("body").load(window.location.href = "");
+    window.location.replace("/");
 </script>
