--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -85,7 +85,7 @@ var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
     <h3>Awaiting opponent...</h3>
 <% end %>
 <% if !current_user.active_player.is_inactive %>
-<br><br><button style="background-color: #2541c3" onclick="Resign()" type="button" class="btn btn-primary">
+<br><br><button style="background-color: #2541c3" onclick="Resign(); this.disabled = true" type="button" class="btn btn-primary" id="resign">
   RESIGN</button>
 <% end %>
 <script type ="text/javascript" charset="utf-8">
@@ -144,11 +144,13 @@ var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
     }
 
     function Resign()
+
     {
         $.ajax({
             url: "players/resign_current_player",
             type: 'PUT'
         });
-        setTimeout($('body').load('/play/display_spinner.html'), 1000);
+
+        setTimeout($('body').load('/play/display_spinner.html'), 500);
     }
 </script>
