--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,9 +1,11 @@
 <div id="main" class="text-center">
-<h1>WELCOME TO TRIPPIN' ON TRIVIA</h1>
+  <button style="font-family: Arcade-Classic; font-size: 1.4em; background-color: #fd5400"onclick="Refresh()" type="button" class="btn btn-primary">
+    REFRESH</button><br>
+  <h1>WELCOME TO TRIPPIN' ON TRIVIA</h1>
   <br><br>
-  <button style="font-family: Arcade-Classic; font-size: 2.3em; background-color: #2541c3"onclick="ChangePage()" type="button" class="btn btn-primary btn-lg btn-block">
-    + NEW GAME</button><br><br>
-
+  <button style="font-family: Arcade-Classic; font-size: 2.3em; background-color: #2541c3"onclick="ChangePage()" type="button" class="btn btn-primary">
+    + NEW GAME</button>
+<div id="games">
   <% active_players = current_user.players.all_active_players.order(updated_at: :desc)%>
   <% active_players.each do |player|%>
 
@@ -34,7 +36,7 @@
             </script>
   <% end %>
 
-  <% closed_players = current_user.players.all_closed_players.order(updated_at: :desc)%>
+  <% closed_players = current_user.players.all_closed_players.order(updated_at: :desc).limit(5)%>
   <% closed_players.each do |player|%>
 
             <%assign_button_labels(player)%>
@@ -49,7 +51,7 @@
             </script>
   <% end %>
 </div>
-
+</div>
 
 <script>
 
@@ -78,4 +80,8 @@
     {
         $('body').load('play/display_spinner.html');
     }
+
+        function Refresh() {
+            location.reload();
+        }
 </script>
